# odri_bolt_robot

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci-build-binary.yml  ci-build-coverage.yml  ci-build-source.yml  ci-format.yml  ci-ros-lint.yaml
doc/: Calibration.md  Forward_Position_Bolt.md  Launch.md  Setup_Bold.md  Start.md
odri_bolt_bringup/: CMakeLists.txt  package.xml
odri_bolt_bringup/launch/: bolt.launch.py  bolt_joint_trajectory_publisher.launch.py  bolt_system_position_only_gazebo.launch.py  test_forward_position_controller.launch.py
odri_bolt_description/: CMakeLists.txt  README.md  package.xml
odri_bolt_description/gazebo/: bolt.gazebo.xacro
odri_bolt_description/ros2_control/: system_bolt.ros2_control.xacro
odri_bolt_description/urdf/: crane.urdf.xacro  leg.xacro  system_bolt.urdf.xacro  system_bolt_description.urdf.xacro
odri_bolt_gz/: CMakeLists.txt  package.xml
odri_bolt_gz/config/: odri_bolt_controllers.yaml  view_bolt.config
odri_bolt_gz/launch/: bolt_gazebo_sim.launch.py
odri_bolt_robot/: CMakeLists.txt  package.xml
