<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odri_bolt_gz</name>
  <version>0.0.0</version>
  <description>Package for Gazebo gz simulation of the ODRI Bolt robot.</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>odri_bolt_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
